--- a/example/example.cabal
+++ b/example/example.cabal
@@ -10,3 +10,7 @@ executable example
                , digest
                , bytestring
                , ghc-musl-test-dep
+               , bzlib-conduit
+               , http-client-openssl
+               , pcre-light
+
