--- a/example/cabal.project
+++ b/example/cabal.project
@@ -1,5 +1,5 @@
 source-repository-package
   type: git
-  location: git://github.com/utdemir/ghc-musl-test-dep.git
+  location: https://github.com/utdemir/ghc-musl-test-dep
 
 packages: *.cabal
