--- a/config.json
+++ b/config.json
@@ -1,16 +1,15 @@
-{ "version": "v16"
-, "baseImage": "alpine:3.12.0"
+{ "version": "v17"
 , "flavours":
-  [ { "BASE_IMAGE": "alpine:3.12.0"
-    , "GHC_VERSION": "8.10.2"
+  [ { "BASE_IMAGE": "alpine:3.13.0"
+    , "GHC_VERSION": "9.0.1"
+    , "CABAL_VERSION": "3.4.0.0-rc4"
+    }
+  , { "BASE_IMAGE": "alpine:3.13.0"
+    , "GHC_VERSION": "8.10.4"
     , "CABAL_VERSION": "3.2.0.0"
     }
-  , { "BASE_IMAGE": "alpine:3.12.0"
+  , { "BASE_IMAGE": "alpine:3.13.0"
     , "GHC_VERSION": "8.8.4"
-    , "CABAL_VERSION": "3.0.0.0"
-    }
-  , { "BASE_IMAGE": "alpine:3.11.6"
-    , "GHC_VERSION": "8.6.5"
     , "CABAL_VERSION": "3.0.0.0"
     }
   ]
